--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <h1>Gabriel Araujo</h1>
 
-    <h3>Front_End Developer</h3>
+    <h3>Front-End Developer</h3>
 
     <a target="_blank" href="https://github.com/gabriell-ferreira">
       GitHub
