--- a/index.html
+++ b/index.html
@@ -53,6 +53,13 @@
           Awax
         </a>
       </div>
+
+      <div class="project">
+        <img src="assets/pokedex.png" alt="pokedex">
+        <a target="_blank" href="https://gabriell-ferreira.github.io/pokedex">
+          Awax
+        </a>
+      </div>
     </div>
     
   </section>
