--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <main id="info">
-    <img src="assets/user.jpg" alt="Gabriel Araujo">
+    <img src="https://ik.imagekit.io/xc7bzbnt53/Avatar_hBosF4cWf.png" alt="Gabriel Araujo">
 
     <h1>Gabriel Araujo</h1>
 
