Fix name project

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       <div class="project">
         <img src="assets/pokedex.png" alt="pokedex">
         <a target="_blank" href="https://gabriell-ferreira.github.io/pokedex">
-          Awax
+          Pokedex
         </a>
       </div>
     </div>
