add contact button

--- a/index.html
+++ b/index.html
@@ -14,13 +14,21 @@
 
     <h3>Front-End Developer</h3>
 
-    <a target="_blank" href="https://github.com/gabriell-ferreira">
-      GitHub
-    </a>
+    <div class="contacts">
+      <a href="#projects">
+        My Projects
+      </a>
 
-    <a href="#projects">
-      My Projects
-    </a>
+      <a target="_blank" href="https://github.com/gabriell-ferreira">
+        GitHub
+      </a>
+
+      <a target="_blank" href="https://www.linkedin.com/in/gabriel-ferreira-7a92241a3/">
+        LinkedIn
+      </a>
+    </div>
+
+    
   </main>
   <section id="projects">
     <h1>My Projects</h1>
@@ -57,7 +65,7 @@
       <div class="project">
         <img src="assets/pokedex.png" alt="pokedex">
         <a target="_blank" href="https://gabriell-ferreira.github.io/pokedex">
-          Awax
+          Pokedex
         </a>
       </div>
     </div>
@@ -66,6 +74,5 @@
   <a class="btn-back-top" href="#info">
     Back to Top
   </a>
-  <script src="script.js"></script>
 </body>
 </html>
