add new project

--- a/index.html
+++ b/index.html
@@ -98,6 +98,19 @@
           </a>
         </div>
       </div>
+
+      <div class="project">
+        <span>Login Page</span>
+        <img src="assets/login.png" alt="login">
+        <div class="links">
+          <a target="_blank" href="https://github.com/gabriell-ferreira/simple-login-page">
+            GitHub
+          </a> 
+          <a target="_blank" href="https://gabriell-ferreira.github.io/simple-login-page/">
+            Login Page
+          </a>
+        </div>
+      </div>
     </div>
     
   </section>
