add about section

--- a/index.html
+++ b/index.html
@@ -27,10 +27,26 @@
         LinkedIn
       </a>
 
+      <a href="#about">
+        About Me
+      </a>
+
     </div>
 
     
   </main>
+
+  <section id="about">
+    <h1>About me</h1>
+
+    <img src="assets/user.jpg" alt="">
+
+    <p>
+      Hello, my name is Gabriel. I have 20 years and i am a computer science student. 
+      I got to know programming in college and today I aim to become a fullstack developer, below I have some projects that I built during my studies.
+    </p>
+  </section>
+
   <section id="projects">
     <h1>My Projects</h1>
 
